--- a/dono/settings.json
+++ b/dono/settings.json
@@ -4,5 +4,5 @@
   "donoName": "YatoMods",
   "NumeroDono": "558892153207",
   "API_KEY_NEXUS": "nexusfree",
-  "fotomenu": "https://nexus-api.shop/w3fu8u.jpg"
+  "fotomenu": "https://nexus-api.shop/hu7jo4.jpg"
 }
