--- a/dono/settings.json
+++ b/dono/settings.json
@@ -1,8 +1,8 @@
 {
-  "prefixo": "/",
+  "prefixo": "!",
   "botName": "Raya Base",
   "donoName": "YatoMods",
   "NumeroDono": "558892153207",
-  "API_KEY_NEXUS": "nexusfree",
-  "fotomenu": "https://files.catbox.moe/dxmnzl.jpeg"
+  "API_NODZ": "d5abb4399c",
+  "fotomenu": "https://files.catbox.moe/hyogwn.png"
 }
